--- a/blog-tutorial.cabal
+++ b/blog-tutorial.cabal
@@ -1,4 +1,4 @@
-name:                Servant-Opaleye Blog Tutorial
+name:                blog-tutorial
 version:             0.1.0.0
 synopsis:            Initial project template from stack
 description:         Please see README.md
@@ -16,11 +16,16 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Lib
+                     , App
+                     , Api.User
+                     , Api.BlogPost
   build-depends:       base >= 4.7 && < 5
                      , aeson
                      , servant-server
                      , wai
                      , warp
+                     , either
+                     , datetime
   default-language:    Haskell2010
 
 executable blog-tutorial-exe
