--- a/blog-tutorial.cabal
+++ b/blog-tutorial.cabal
@@ -1,13 +1,13 @@
 name:                blog-tutorial
 version:             0.1.0.0
-synopsis:            Initial project template from stack
+synopsis:            Building a Servant API
 description:         Please see README.md
 homepage:            http://github.com/nomicflux/servant-opaleye-tutorial
 license:             BSD3
 license-file:        LICENSE
 author:              Michael Anderson
 maintainer:          nomicflux@gmail.com
-copyright:           2016 Author Here
+copyright:           2016 Michael Anderson
 category:            Web
 build-type:          Simple
 -- extra-source-files:
