--- a/blog-tutorial.cabal
+++ b/blog-tutorial.cabal
@@ -1,4 +1,4 @@
-name:                Servant-Opaleye Blog Tutorial
+name:                blog-tutorial
 version:             0.1.0.0
 synopsis:            Initial project template from stack
 description:         Please see README.md
