--- a/blog-tutorial.cabal
+++ b/blog-tutorial.cabal
@@ -21,10 +21,10 @@ library
                      , Api.BlogPost
   build-depends:       base >= 4.7 && < 5
                      , aeson
-                     , servant-server
+                     , servant-server == 0.5
                      , wai
                      , warp
-                     , either
+                     , transformers
                      , datetime
   default-language:    Haskell2010
 
