--- a/blog-tutorial.cabal
+++ b/blog-tutorial.cabal
@@ -25,10 +25,9 @@ library
                      , Queries.BlogPost
   build-depends:       base >= 4.7 && < 5
                      , aeson
-                     , servant-server
+                     , servant-server == 0.5
                      , wai
                      , warp
-                     , either
                      , datetime
                      , opaleye
                      , product-profunctors
