--- a/stack.yaml
+++ b/stack.yaml
@@ -3,5 +3,18 @@ extra-package-dbs: []
 packages:
 - '.'
 extra-deps:
+- base-compat-0.9.1
+- bifunctors-5.2
+- bytestring-builder-0.10.8.1.0
+- conduit-extra-1.1.13.2
 - datetime-0.3.1
+- fast-logger-2.4.6
+- opaleye-0.5.0.0
+- postgresql-simple-0.5.2.1
+- servant-0.5
+- servant-server-0.5
+- vector-0.11.0.0
+- wai-3.0.3.0
+- wai-extra-3.0.16.1
+- wai-logger-2.3.0
 resolver: lts-3.17
