--- a/blog-tutorial.cabal
+++ b/blog-tutorial.cabal
@@ -18,7 +18,7 @@ library
   exposed-modules:     Lib
   build-depends:       base >= 4.7 && < 5
                      , aeson
-                     , servant-server
+                     , servant-server == 0.5
                      , wai
                      , warp
   default-language:    Haskell2010
