--- a/stack.yaml
+++ b/stack.yaml
@@ -1,32 +1,16 @@
-# For more information, see: https://github.com/commercialhaskell/stack/blob/release/doc/yaml_configuration.md
-
-# Specifies the GHC version and set of packages available (e.g., lts-3.5, nightly-2015-09-21, ghc-7.10.2)
-resolver: lts-3.17
-
-# Local packages, usually specified by relative directory name
+flags: {}
+extra-package-dbs: []
 packages:
 - '.'
-
-# Packages to be pulled from upstream that are not in the resolver (e.g., acme-missiles-0.3)
-extra-deps: []
-
-# Override default flag values for local packages and extra-deps
-flags: {}
-
-# Extra package databases containing global packages
-extra-package-dbs: []
-
-# Control whether we use the GHC we find on the path
-# system-ghc: true
-
-# Require a specific version of stack, using version ranges
-# require-stack-version: -any # Default
-# require-stack-version: >= 0.1.10.0
-
-# Override the architecture used by stack, especially useful on Windows
-# arch: i386
-# arch: x86_64
-
-# Extra directories used by stack for building
-# extra-include-dirs: [/path/to/dir]
-# extra-lib-dirs: [/path/to/dir]
+extra-deps:
+- base-compat-0.9.1
+- bytestring-builder-0.10.8.1.0
+- conduit-extra-1.1.13.2
+- fast-logger-2.4.6
+- servant-0.5
+- servant-server-0.5
+- vector-0.11.0.0
+- wai-3.0.3.0
+- wai-extra-3.0.16.1
+- wai-logger-2.3.0
+resolver: lts-3.17
