--- a/blog-tutorial.cabal
+++ b/blog-tutorial.cabal
@@ -35,6 +35,7 @@ library
                      , postgresql-simple
                      , transformers
                      , pwstore-fast
+                     , resource-pool
   default-language:    Haskell2010
 
 executable blog-tutorial-exe
