Added lesson6; closes #2

--- a/blog-tutorial.cabal
+++ b/blog-tutorial.cabal
@@ -36,6 +36,9 @@ library
                      , transformers
                      , pwstore-fast
                      , resource-pool
+                     , wai-extra
+                     , fast-logger
+                     , data-default-class
   default-language:    Haskell2010
 
 executable blog-tutorial-exe
