--- a/blog-tutorial.cabal
+++ b/blog-tutorial.cabal
@@ -39,6 +39,7 @@ library
                      , wai-extra
                      , fast-logger
                      , data-default-class
+                     , text
   default-language:    Haskell2010
 
 executable blog-tutorial-exe
