--- a/stack.yaml
+++ b/stack.yaml
@@ -8,10 +8,11 @@ extra-deps:
 - conduit-extra-1.1.13.2
 - datetime-0.3.1
 - fast-logger-2.4.6
-- servant-0.5
-- servant-server-0.5
+- servant-0.8.1
+- servant-server-0.8
+- unix-time-0.3.7
 - vector-0.11.0.0
 - wai-3.0.3.0
-- wai-extra-3.0.16.1
+- wai-extra-3.0.17
 - wai-logger-2.3.0
 resolver: lts-3.17
