--- a/blog-tutorial.cabal
+++ b/blog-tutorial.cabal
@@ -25,7 +25,7 @@ library
                      , wai
                      , warp
                      , transformers
-                     , datetime
+                     , time
   default-language:    Haskell2010
 
 executable blog-tutorial-exe
